# meatshell

./: CHANGELOG.md  Cargo.toml  README.en.md  README.md
.github/workflows/: release.yml
assets/: Info.plist
lang/en/LC_MESSAGES/: meatshell.po
lang/zh/LC_MESSAGES/: meatshell.po
src/: app.rs  config.rs  errlog.rs  forward.rs  main.rs  sftp.rs  ssh.rs  system.rs  zmodem.rs
ui/: app.slint  interface_panel.slint  session_dialog.slint  sftp_panel.slint  sidebar.slint  tabs.slint  terminal_view.slint  theme.slint  welcome.slint  widgets.slint
