[package]
name = "meatshell"
version = "0.5.0"
edition = "2021"
authors = ["meatshell contributors"]
description = "A lightweight FinalShell-style SSH/terminal client written in Rust + Slint"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your/meatshell"
readme = "README.md"
rust-version = "1.75"

[dependencies]
slint = { version = "1.8", features = ["compat-1-2"] }
# ICU4X (pulled in by Slint's text layout) spams stderr with raw `eprintln!`
# ("ICU4X data error: No segmentation model for language: ja") because its
# `log` shim falls back to eprintln when the `logging` feature is off. Turning
# `logging` on routes those through the real `log` crate → our tracing
# subscriber, where init_tracing silences the `icu_provider` target.
icu_provider = { version = "2", features = ["logging"] }
# Direct access to the winit window/events (OS file-drop for drag-and-drop upload).
i-slint-backend-winit = "1.16"
# Raw HWND access (matches winit's rwh 0.6) for the Win11 rounded-corner + shadow
# DWM tweaks on the frameless window (#162 / #166). Only used under cfg(windows).
raw-window-handle = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "time", "fs"] }
# Pinned to 0.49: RUSTSEC-2026-0154 (an unbounded-allocation DoS in russh's
# ssh-AGENT frame parsing) is fixed only in >= 0.60.3, which drags in pre-release
# crypto crates (ed25519-dalek 3.0.0-pre, aes-gcm 0.11.0-rc, …). meatshell never
# uses the ssh-agent, so the advisory is not reachable here — see audit.toml.
# Revisit the upgrade once russh's deps leave the -rc channel (cf. PR #151).
russh = "0.49"
russh-keys = "0.49"
ssh-key = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
vt100 = "0.15"
# East Asian width detection for terminal copy/find column math. Pinned to the
# same version vt100 uses so "is this glyph 2 cells wide?" agrees with how vt100
# lays CJK glyphs on the grid — otherwise selection/find columns drift (#132).
unicode-width = "0.1.14"
russh-sftp = "2"
rfd = "0.15"
arboard = "3"
# Zeroes password buffers on drop so plaintext credentials don't linger in
# freed heap memory (core dumps / debuggers / /proc/pid/mem).
zeroize = "1"
# SOCKS5 proxy tunnelling for SSH/SFTP in network-restricted environments.
# (HTTP CONNECT proxies are handled in src/proxy.rs without an extra crate.)
tokio-socks = "0.5"
base64 = "0.22"
# Enumerate installed system fonts for the Interface (font) settings picker.
fontdb = "0.16"
# Cross-platform serial port access for the Serial session type (#14, #17).
# Opens COM3 / /dev/ttyUSB0 etc.; on Linux the default `libudev` feature is
# used for port enumeration (CI installs libudev-dev).
serialport = "4"
# ChaCha20-Poly1305 AEAD for encrypting passwords at rest in sessions.json.
# rand (OsRng) and base64 are already pulled in by other deps above.
chacha20poly1305 = "0.10"
# Detect whether the OS is running in dark or light mode.
# Used on startup to honour the system preference before the user overrides it.
dark-light = "1"
# Lightweight synchronous HTTPS client (bundled rustls, no OpenSSL) for the
# in-app update check against the GitHub releases API (#48). Runs on a
# background thread so it never blocks startup; failure is silently ignored.
ureq = { version = "2", features = ["tls"] }

# Image decoding: custom wallpapers (PNG/JPEG/WebP/BMP) for the immersive theme,
# and the embedded PNG window icon on Linux. On Windows the icon comes from the
# .ico embedded by winresource at link time; on macOS from the app bundle.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Native Wayland clipboard (wlr-data-control protocol) so copy/paste works on
# Wayland sessions (KDE/wlroots) without relying on XWayland (issue #47).
# Feature is additive over the base `arboard = "3"` dependency above.
arboard = { version = "3", features = ["wayland-data-control"] }

# Compile the Skia renderer in *only* on macOS (feature is additive over the base
# slint dependency) so users can opt into it at launch with SLINT_BACKEND=winit-skia.
# The default stays femtovg — see the renderer history note in main.rs (#108/#129).
# Windows/Linux never compile Skia.
[target.'cfg(target_os = "macos")'.dependencies]
slint = { version = "1.8", features = ["renderer-skia"] }

[build-dependencies]
slint-build = "1.8"

# Embeds assets/meatshell.ico into the .exe so Explorer / taskbar / shortcuts
# show the app icon. Windows-only; ignored on other targets.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 1
